# mindustry_logic_bang_lang

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README-en_US.md  README.md  TODO.md  build.rs
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  push.yml  release.yml
examples/: 21point.mdtlbl  README-en_US.md  README.md  all_shoot.mdtlbl  all_syntax.mdtlbl  bezier_curve.mdtlbl  binary_insert_sort.mdtlbl  builtin_functions.mdtlbl  calculator.mdtlbl  caller.mdtlbl  chinese_chess.mdtlbl  closured_value.mdtlbl  cmp_deps.mdtlbl  cmper.mdtlbl  cmps.mdtlbl  compiling_eval.mdtlbl  const.mdtlbl  const_match.mdtlbl  consted_dexp.mdtlbl  control.mdtlbl  control_block.mdtlbl  control_plus.mdtlbl  conveyor_logic_gate.mdtlbl  dexp.mdtlbl  dexp_binder.mdtlbl  display_numbers.mdtlbl  for_each.mdtlbl  function.mdtlbl  gravity_simulation.mdtlbl  gswitch.mdtlbl  inline_block.mdtlbl  insert_sort.mdtlbl  item_ranking_list.mdtlbl  item_transport_beans.mdtlbl  item_transport_beans_extend.mdtlbl  item_transport_beans_extend_mult_units.mdtlbl  iter.mdtlbl  learn-en_US.md  learn.md  luck_draw.mdtlbl  (+37 more)
examples/std/: alloc.mdtlbl  array.mdtlbl  count_loop.mdtlbl  fmt.mdtlbl  for_each.mdtlbl  function.mdtlbl  match_utils.mdtlbl  math.mdtlbl  mem.mdtlbl  mempack.mdtlbl  quick_sensor.mdtlbl  select_table.mdtlbl  stack.mdtlbl  sync.mdtlbl  timeit.mdtlbl
src/: lib.rs  main.rs  syntax.rs  syntax_def.lalrpop  tag_code.rs
src/syntax/: .gitignore  def.lalrpop  mod.rs  tests.rs
syntax/: MindustryLogicBangLang.mtsx  mdtlbl.snippets  mdtlbl.vim
syntax/MT-Manager/: MindustryLogic-compiled.mtsx  MindustryLogic.mtsx  MindustryLogicBangLang.mtsx  README.md
syntax/mdtlbl/: language-configuration.json
syntax/mdtlbl/syntaxes/: mdtlbl.tmLanguage.json
syntax/vim/: README.md  logic.vim  mdtlbl.snippets  mdtlbl.vim
syntax/vim/UltiSnips/: mdtlbl.snippets
syntax/vim/ftdetect/: logic.vim  mdtlbl.vim
syntax/vim/ftplugin/: mdtlbl.vim
syntax/vim/indent/: mdtlbl.vim
syntax/vim/syntax/: logic.vim  mdtlbl.vim
syntax/vscode/: .gitignore  make-snippets.jq
syntax/vscode/mdtlbl/: CHANGELOG.md
syntax/vscode/support/: .vscodeignore  CHANGELOG.md  README.md  language-configuration.json  mdtlbl-1.0.0.vsix  mdtlbl-1.0.10.vsix  package-lock.json  package.json  publish.sh  tsconfig.json  vsc-extension-quickstart.md
syntax/vscode/support/release/: mdtlbl-1.0.1.vsix  mdtlbl-1.0.11.vsix  mdtlbl-1.0.12.vsix  mdtlbl-1.0.13.vsix  mdtlbl-1.0.14.vsix  mdtlbl-1.0.15.vsix  mdtlbl-1.0.16.vsix  mdtlbl-1.0.2.vsix  mdtlbl-1.0.3.vsix  mdtlbl-1.0.4.vsix  mdtlbl-1.0.5.vsix  mdtlbl-1.0.6.vsix  mdtlbl-1.0.7.vsix  mdtlbl-1.0.8.vsix  mdtlbl-1.0.9.vsix
syntax/vscode/support/releases/: mdtlbl-1.0.0.vsix
syntax/vscode/support/snippets/: snippets.json
syntax/vscode/support/src/: extension.ts
syntax/vscode/support/syntaxes/: mdtlbl.tmLanguage.json
syntax_lights/: mdtlbl.vim
tools/bangls/: Cargo.toml  README.md
tools/bangls/src/: actions.rs  lib.rs  main.rs
tools/build_scripts/: build
tools/decompiler/: Cargo.toml  README.md
tools/decompiler/src/: clean.rs  display_impl.rs  lib.rs  main.rs  make.rs  patterns.rs  quality.rs  supp.rs  walk.rs
tools/decompiler/src/quality/: tests.rs
tools/display_source/: Cargo.toml
tools/display_source/src/: impls.rs  lib.rs
tools/logic_lint/: Cargo.toml
tools/logic_lint/src/: lib.rs  lints.rs
tools/mdt-ops-generator/: Cargo.toml
tools/mdt-ops-generator/src/: main.rs
tools/mini-paren/: Cargo.toml
tools/mini-paren/src/: lib.rs
tools/parser/: Cargo.toml  build.rs
tools/parser/src/: lib.rs  parser.lalrpop  tests.rs
tools/parser/tests/: Cargo.toml
tools/parser/tests/src/: lib.rs
tools/syntax/: Cargo.toml
tools/syntax/src/: builtins.rs  lib.rs  tests.rs  walk.rs
tools/tag_code/: Cargo.toml
tools/tag_code/src/: expr_builder.rs  lib.rs  logic_parser.rs
tools/tag_code/src/expr_builder/: ops.rs  tests.rs
tools/utils/: Cargo.toml
tools/utils/src/: counter.rs  lib.rs  tcow.rs
tools/var_utils/: Cargo.toml
tools/var_utils/src/: lib.rs  tests.rs  var.rs
