[package]
name = "mindustry_logic_bang_lang"
version = "0.15.3"
edition = "2021"

authors = ["A4-Tacks <wdsjxhno1001@163.com>"]
description = "一个偏向底层的用于Mindustry游戏中逻辑处理器的语言"
categories = ["command-line-utilities"]
keywords = ["compiler", "lang", "mindustry"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "./tools/display_source",
    "./tools/parser",
    "./tools/parser/tests",
    "./tools/syntax",
    "./tools/tag_code",
    "./tools/utils",
    "./tools/var_utils",
    "./tools/logic_lint",
]

[dependencies]
tag_code = { path = "./tools/tag_code", version = "*" }
display_source = { path = "./tools/display_source", version = "*" }
parser = { path = "./tools/parser", version = "*" }
syntax = { path = "./tools/syntax", version = "*" }
logic_lint = { path = "./tools/logic_lint", version = "*" }

[profile.release]
strip = true
lto = true
