[package]
name = "mindustry_logic_bang_lang"
version = "0.18.25"
edition = "2021"

authors = ["A4-Tacks <wdsjxhno1001@163.com>"]
repository = "https://github.com/A4-Tacks/mindustry_logic_bang_lang"
description = """\
    Mindustry logic extension meta-programming language compiler, \
    for zero additional overhead!"""
categories = ["command-line-utilities"]
keywords = ["compiler", "lang", "mindustry"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "./tools/display_source",
    "./tools/parser",
    "./tools/parser/tests",
    "./tools/syntax",
    "./tools/tag_code",
    "./tools/utils",
    "./tools/var_utils",
    "./tools/logic_lint",
    "./tools/mdt-ops-generator",
]

[workspace.dependencies]
either = "1.14.0"

[dependencies]
tag_code = { path = "./tools/tag_code", version = "*" }
display_source = { path = "./tools/display_source", version = "*" }
parser = { path = "./tools/parser", version = "*" }
syntax = { path = "./tools/syntax", version = "*" }
logic_lint = { path = "./tools/logic_lint", version = "*" }


[profile.dev]
debug = false
lto = "off"

[profile.release]
debug = false
strip = true
lto = true
