[package]
name = "bangls"
version = "0.1.2"
edition = "2024"

[features]
default = ["lalrpop"]
lalrpop = ["parser/lalrpop"]

[dependencies]
anyhow = "1.0.100"
crossbeam-channel = "0.5.15"
line-column = "0.2.0"
linked-hash-map = "0.5.6"
lsp-server = "0.7.9"
lsp-types = "0.97.0"
parser = { version = "0.3.72", path = "../parser", default-features = false }
serde_json = "1.0.146"
syntax = { version = "0.2.77", path = "../syntax" }
