[package]
name = "display_source"
version = "0.3.31"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = { workspace = true }
syntax = { path = "../syntax", version = "*" }

[dev-dependencies]
parser = { path = "../parser", version = "*" }
