[package]
name = "display_source"
version = "0.3.36"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["parser/lalrpop"]

[dependencies]
either = "1.14.0"
syntax = { path = "../syntax", version = "*" }

[dev-dependencies]
parser = { path = "../parser", version = "*", default-features = false }
