[package]
name = "logic_lint"
version = "0.1.14"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy-regex = "3.0.2"
tag_code = { path = "../tag_code", version = "*" }
var_utils = { path = "../var_utils", version = "*" }
