[package]
name = "parser"
version = "0.3.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
syntax = { path = "../syntax", version = "*" }
var_utils = { path = "../var_utils", version = "*" }

[dependencies.lalrpop-util]
version = "0.20.0"

features = [
    "unicode",
    "regex",
    "lexer"
]

[dev-dependencies]
tag_code = { path = "../tag_code", version = "*" }
