[package]
name = "parser"
version = "0.3.47"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "=0.22.1"

[dependencies]
syntax = { path = "../syntax", version = "*" }
var_utils = { path = "../var_utils", version = "*" }
tag_code = { path = "../tag_code", version = "*" }

[dependencies.lalrpop-util]
version = "=0.22.1"

features = [
    "unicode",
    "lexer",
]
