[package]
name = "syntax"
version = "0.2.68"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tag_code = { path = "../tag_code", version = "*" }
var_utils = { path = "../var_utils", version = "*"}
utils = { path = "../utils", version = "*" }
either = { workspace = true }
itermaps = "0.3.1"
linked-hash-map = "0.5.6"
