[package]
name = "parser-tests"
version = "0.1.36"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
parser = { path = "..", version = "*" }
tag_code = { path = "../../tag_code", version = "*" }
syntax = { path = "../../syntax", version = "*" }

[dependencies]
either = "1.13.0"
