[package]
name = "parser-tests"
version = "0.1.89"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["parser/lalrpop"]

[dev-dependencies]
parser = { path = "..", version = "*", default-features = false }
tag_code = { path = "../../tag_code", version = "*" }
syntax = { path = "../../syntax", version = "*" }

[dependencies]
either = { workspace = true }
