[package]
name = "parser-tests"
version = "0.1.95"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["parser/lalrpop"]

[dev-dependencies]
parser = { path = "..", version = "*", default-features = false }
tag_code = { path = "../../tag_code", version = "*" }
syntax = { path = "../../syntax", version = "*" }
dissimilar = "1.0.10"

[dependencies]
either = "1.14.0"
